force-app/main/default/objects/Data_Anonymisation__mdt/Data_Anonymisation__mdt.object-meta.xml
<CustomObject>
    <label>Data Anonymisation</label>
    <pluralLabel>Data Anonymisations</pluralLabel>
</CustomObject>