force-app/main/default/objects/Data_Anonymisation__mdt/fields/Compound_Field__c.field-meta.xml
<CustomField>
    <fullName>Compound_Field__c</fullName>
    <label>Compound Field</label>
    <metadataRelationshipControllingField>Data_Anonymisation__mdt.SObject__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Data_Anonymisations</relationshipLabel>
    <relationshipName>Data_Anonymisations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>