force-app/main/default/objects/Data_Anonymisation__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <metadataRelationshipControllingField>Data_Anonymisation__mdt.SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Data_Anonymisations</relationshipLabel>
    <relationshipName>Data_Anonymisations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>