force-app/main/default/objects/Data_Anonymisation__mdt/fields/Length_of_Data__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Data__c</fullName>
    <label>Length of Data</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>