force-app/main/default/objects/Data_Anonymisation__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Data_Anonymisations</relationshipLabel>
    <relationshipName>Data_Anonymisations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>